[package]
name = "logix"
version.workspace = true
description = "An experimental command-line tool for simplified and enhanced configuration management across multiple systems."
repository = "https://github.com/logix-tool/logix"
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
categories = ["command-line-utilities", "config"]

[badges]
maintainance = { status = "experimental" }

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
home = "0.5.9"
logix-type = "0.11.2"
logix-vfs = "0.9.1"
owo-colors = "4.1.0"
prettydiff = "0.7.0"
regex = "1.11.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
tempfile = "3.13.0"
thiserror = "1.0.64"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing", "serde"] }
ureq = { version = "2.10.1", features = ["json"] }
walkdir = "2.5.0"

[workspace]
resolver = "2"
members = [
  "xtask",
]

[workspace.package]
version = "0.6.0"
authors = [
  "Gigantos <gigantos@gigantos.net>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
