[package]
name = "logix"
version.workspace = true
description = "An experimental command-line tool for simplified and enhanced configuration management across multiple systems."
repository = "https://github.com/logix-tool/logix"
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
categories = ["command-line-utilities", "config"]

[badges]
maintainance = { status = "experimental" }

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
curl = "0.4.47"
flexi_logger = "0.29.1"
home = "0.5.9"
jiff = { version = "0.1.13", features = ["serde"] }
log = "0.4.22"
logix-type = "0.11.2"
logix-vfs = "0.9.1"
owo-colors = "4.1.0"
prettydiff = "0.7.0"
regex = "1.11.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.13.0"
thiserror = "1.0.64"
walkdir = "2.5.0"

[workspace]
resolver = "2"
members = [
  "xtask",
]

[workspace.package]
version = "0.7.0"
authors = [
  "Gigantos <gigantos@gigantos.net>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
